--- a/Web-based Calculator/index.html
+++ b/Web-based Calculator/index.html
@@ -31,13 +31,13 @@
         <button>1</button>
         <button>2</button>
         <button>3</button>
-        <button>+</button>
+        <button class="operator">+</button>
       </div>
       <div>
         <button>00</button>
         <button>0</button>
         <button>.</button>
-        <button>=</button>
+        <button class="equalBtn">=</button>
       </div>
     </div>
   </body>
