--- a/Web-based Calculator/index.html
+++ b/Web-based Calculator/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <div class="calculator">
-      <input type="text" placeholder="0" />
+      <input type="text" placeholder="0" id="inputBox" />
       <div>
-        <button>AC</button>
-        <button>DEL</button>
-        <button>%</button>
+        <button class="operator">AC</button>
+        <button class="operator">DEL</button>
+        <button class="operator">%</button>
         <button class="operator">/</button>
       </div>
       <div>
@@ -40,5 +40,6 @@
         <button class="equalBtn">=</button>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
